--- a/common/common.scss
+++ b/common/common.scss
@@ -45,7 +45,7 @@ body textarea {
 // CUSTOM STYLES
 // CUSTOM STYLES
 .d-header {
-    background-color: #fff;
+    background-color: red;
     box-shadow: none;
 }
 .d-header .title a {
